--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
     <script src="systemjs.config.js"></script>
     <script>
       System.import('app').catch(function(err){ console.error(err);  });
+      
+      window.onbeforeunload = function() {
+        //localStorage.removeItem("id_token");
+      };
     </script>
   </head>
+
+  
 
   <body>
      <br>
