sesson removal for portal

--- a/index.html
+++ b/index.html
@@ -6,20 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href="node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-  <link href="css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link href="css/spp.css" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="node_modules/primeui/themes/casablanca/theme.css" />
   <link rel="stylesheet" type="text/css" href="node_modules/primeui/primeui-ng-all.css" />
-
-
   
+  <link rel="stylesheet" href="node_modules/ng2-datetime/src/vendor/bootstrap-timepicker/bootstrap-timepicker.min.css">
+  <link rel="stylesheet" href="node_modules/ng2-datetime/src/vendor/bootstrap-datepicker/bootstrap-datepicker3.min.css">
+
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="node_modules/zone.js/dist/zone.js"></script>
   <script src="node_modules/reflect-metadata/Reflect.js"></script>
   <script src="thirdparty/papaparse/papaparse.min.js"></script>
   <script src="node_modules/primeui/primeui-ng-all.min.js"></script>
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry" async></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.js"></script>
   <script src="node_modules/underscore/underscore-min.js"></script>
+
+  <script src="node_modules/ng2-datetime/src/vendor/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
+  <script src="node_modules/ng2-datetime/src/vendor/bootstrap-timepicker/bootstrap-timepicker.min.js"></script>
+
+
 
 
 </head>
@@ -27,9 +33,9 @@
 
 
 <body>
-  
+
   <div class="container-fluid">
-  <app><span style="padding-left:10px;"><i class='fa fa-spinner fa-spin'></i> Loading...</span></app>
+    <app><span style="padding-left:10px;"><i class='fa fa-spinner fa-spin'></i> Loading...</span></app>
   </div>
 </body>
 
