--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <link href="node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  
   <link href="css/spp.css" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="node_modules/primeui/themes/casablanca/theme.css" />
   <link rel="stylesheet" type="text/css" href="node_modules/primeui/primeui-ng-all.css" />
@@ -19,6 +20,8 @@
   <script src="node_modules/reflect-metadata/Reflect.js"></script>
   <script src="thirdparty/papaparse/papaparse.min.js"></script>
   <script src="node_modules/primeui/primeui-ng-all.min.js"></script>
+  
+  
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry" async></script>
   <script src="node_modules/underscore/underscore-min.js"></script>
 
@@ -33,10 +36,17 @@
 
 
 <body>
-
-  <div class="container-fluid">
-    <app><span style="padding-left:10px;"><i class='fa fa-spinner fa-spin'></i> Loading...</span></app>
+  
+  
+<div class="container-fluid">
+  <app>
+  <div style="padding-left:10px;padding-top:30px;font-size:20px;" class="centered-box text-center">
+  <img src="./images/SPPLogo.jpg">
+  <br>
+  <i class='fa fa-spinner fa-spin'></i> Loading...
   </div>
+  </app>
+</div>
 </body>
 
 <script src="dist/bundle.js"></script>
